# FactorLab

./: .gitignore  CLAUDE.md  Procfile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
configs/reference/: house_asset_type_codes.yaml  lda_filing_types.yaml  lda_government_entities.yaml  lda_issue_codes.yaml
configs/sources/: eodhd.yaml  ibkr.yaml  schwab.yaml  upstox.yaml
configs/universes/: india.yaml  us.yaml
docs/: README.md  local-postgres-setup.md
docs/architecture/: 01-overview.md  02-database-postgres.md  03-roadmap.md  04-multi-country-schema.md
docs/countries/: india-equities.md
docs/data-sources/: 01-us-equities-eodhd.md  02-india-markets-upstox.md  03-social-reddit-twitter.md  04-political-senator-trades.md  05-research-arxiv.md  06-ibkr.md  07-us-equities-schwab.md  08-india-fundamentals-filings.md  09-insider-supply-chain.md  10-india-fii-fpi-flows.md  11-macro-regime.md  12-earnings-revisions-estimates.md  13-earnings-call-transcripts.md  14-short-interest-positioning.md  15-commodities-input-costs.md  16-index-reconstitution.md  17-regulatory-policy-events.md  18-fund-flows-buybacks-shareholding.md
migrations/: env.py
migrations/versions/: 001_create_schemas.py  002_add_futures_columns.py  002_create_ref_tables.py  003_create_instruments.py  004_create_market_tables.py  005_create_universe_tables.py  006_seed_reference_data.py  (+2 more)
scripts/: batch_test_db.py  factlab_auth_server.py  factlab_india_5min.py  factlab_india_hourly.py  factlab_india_premarket.py  factlab_us_daily.py  setup_task_scheduler.bat
(+17 files in other folders)
